--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </div>
             <div class="col">
                 <img src="Assets/device-pile-in.png" alt="">
+                <video src="Assets/video-devices-in.m4v" autoplay loop></video>
             </div>
         </div>
     </div>
