--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@
                 <h2>Enjoy on your TV</h2>
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
-            <div class="col">
-                <img src="Assets/tv.png" alt="">
+            <div class="col c1">
+                
+                <video class="video1" autoplay loop muted>
+                    <source src="Assets/video-tv-in-0819.m4v">
+                </video>
+                <img src="Assets/tv.png" alt="" class="image1">
             </div>
         </div>
     </div>
@@ -81,9 +85,15 @@
                 <h2>Watch everywhere</h2>
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
-            <div class="col">
-                <img src="Assets/device-pile-in.png" alt="">
-                <video src="Assets/video-devices-in.m4v" autoplay loop></video>
+            <div class="col c2">
+                <div class="col1">
+
+                </div>
+
+                <video class="video2" autoplay loop muted>
+                    <source src="Assets/video-devices-in.m4v">
+                </video>
+                <img src="Assets/device-pile-in.png" alt="" class="image2">
             </div>
         </div>
     </div>
